tdf#148218 reduce OUString allocations

we allocate an awful lot of temporary OUString while looking up translation strings.

Add some API to LanguageTag to reduce this by using a common OStringBuffer.

Reduces peak memory usage from 420M to 283M

Change-Id: Ie55267631f2178e3a6590eebf5876c963a4cda69
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198197
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit fba849c048ce41a3e726778b7a088a47faf84b29)
Reviewed-on: https://gerrit.collaboraoffice.com/c/core/+/316
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>
Reviewed-by: Noel Grandin <noel.grandin@collabora.com>